<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_warning">

    <fragment
        android:id="@+id/nav_warning"
        android:name="com.example.support.ui.warning.WarningFragment"
        android:label="@string/you_re_stupid"
        tools:layout="@layout/fragment_warning" />

    <fragment
        android:id="@+id/nav_overview_money"
        android:name="com.example.support.ui.overview_money.OverviewMoneyFragment"
        android:label="@string/overview_money"
        tools:layout="@layout/fragment_overview_money" />

    <fragment
        android:id="@+id/nav_budget"
        android:name="com.example.support.ui.budget.BudgetFragment"
        android:label="@string/budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.example.support.ui.wallet.WalletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/nav_overview_time"
        android:name="com.example.support.ui.overview_time.OverviewTimeFragment"
        android:label="@string/overview_time"
        tools:layout="@layout/fragment_overview_time" />

    <fragment
        android:id="@+id/nav_todolist"
        android:name="com.example.support.ui.todolist.TodolistFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_todolist" />

    <fragment
        android:id="@+id/nav_dev"
        android:name="com.example.support.ui.dev.DevFragment"
        android:label="@string/dev"
        tools:layout="@layout/fragment_dev" />
</navigation>